# PY56_csv_preprocessor

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  README.md  pyproject.toml
sample/vscode/: launch.json
src/: cmd_column.py  cmd_common.py  cmd_csv.py  cmd_custom.py  column_name.py  common.py  csv.py  csv_preprocessor.py  main.py  table.py  table_utl.py
test_data/csv_info/: 2x3_header.csv
test_data/custom/data/: 1x3_a.csv  1x8_b.csv
test_data/header0/: 3x2_none.csv  3x9.csv  5x5_none.csv
test_data/header1/: 5x3_sort_int.csv  5x5.csv  5x5_sort.csv
test_data/header2/: 3x3.csv
tests/: test_cmd_custom.py  test_column_name.py  test_common.py  test_csv.py  test_csv_preprocessor.py  test_table.py  test_table_utl.py  test_tool_csv.py  test_util.py  tool_csv.py
